--- a/views/Article.hbs
+++ b/views/Article.hbs
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="article.css" type="text/css">
+    <link rel="stylesheet" href="/css/article.css" type="text/css">
     <title>Article</title>
 </head>
 <body class="max-width-container">
     <div class="container">
         <div class="article-title">
-            <h1>How Instagram Influences our social life</h1>
+            <h1>{{getArticle.article.title}}</h1>
         </div>
         <div class="author-profile">
             <div class="author-bio">
-                <img src="./medium-Assets/009.jpg">
+                <img src="/img/009.jpg">
                 <div class="author">
-                    <h2 class="author-name">Jane Doe</h2>
-                    <h2 class="author-username">@Black_quenn</h2>
+                    <h2 class="author-name">{{getArticle.userArticle.name}}</h2>
+                    <h2 class="author-username">{{getArticle.userArticle.username}}</h2>
                 </div>
             </div>
             <div class="author-follow">
@@ -28,44 +28,49 @@
 
         <section class="article container">
             <h3>12 Mins Read</h3>
-            <img src="medium-Assets/Selfie.svg" class="article-img">
-            <p class="article-text">Instagram is a  popular social media that helps showcase our pictures and happy events to the world. Just as we have disadvantages of everything in life , so also we have advantages as well(The good side). 
+            <img src="/{{getArticle.article.thumbnail}}" class="article-img">
+            <p class="article-text">
+                {{getArticle.article.body}}
             </p>
             <div class="article-metas">
                 <div class="like-comment extra-width">
-                    <span class="likes"><img src="./medium-Assets/Star.svg"><h1>21k</h1></span>
-                    <span class="likes"><img src="./medium-Assets/Chat.svg"><h1>21k</h1></span>
+                    <span class="likes"><img src="/img/Star.svg"><h1>21k</h1></span>
+                    <span class="likes"><img src="/img/Chat.svg"><h1>21k</h1></span>
                 </div>
-                <img src="medium-Assets/Bookmark.svg">
+                <img src="/img/Bookmark.svg">
             </div>
         </section>
 
         <section class="related">
+            {{!-- other related --}}
             <div class="container">
                 <h1 class="related-heading">Related Topics</h1>
             </div>
-            <div class="background-wrapper">
-                <div class="blog-article container">
-                    <div class="blog-image">
-                        <img src="./medium-Assets/Selfie.svg">
-                    </div>
-                    <div class="blog-piece">
-                        <h1 class="blog-category">Social Life</h1>
-                        <h1 class="blog-title">How Instagram Influences our Social Life</h1>
-                        <h2 class="blog-summary">Talks about celebs</h2>
-                    </div>
-                    <div class="blog-metas">
-                        <div class="like-comment">
-                            <span class="likes"><img src="./medium-Assets/Star.svg"><h1>21k</h1></span>
-                            <img src="medium-Assets/Bookmark.svg">
+            {{#each getArticle.relatedPosts}}
+                <a href="/posts/{{../getArticle.loggedId}}/article/{{this._id}}">
+                    <div class="background-wrapper">
+                        <div class="blog-article container">
+                            <div class="blog-image">
+                                <img src="/{{this.thumbnail}}">
+                            </div>
+                            <div class="blog-piece">
+                                <h1 class="blog-category">Tech</h1>
+                                <h1 class="blog-title">{{sliceText this.title}}</h1>
+                                <h2 class="blog-summary">{{sliceText this.body}}</h2>
+                            </div>
+                            <div class="blog-metas">
+                                <div class="like-comment">
+                                    <span class="likes"><img src="/img/Star.svg"><h1>21k</h1></span>
+                                    <img src="/img/Bookmark.svg">
+                                </div>
+                                <div>
+                                    <h1 class="time-posted">{{dateLocale this.timePosted}}</h1>
+                                </div>
+                            </div>
                         </div>
-                        <div>
-                            <h1 class="time-posted">3 days ago</h1>
-                        </div>
                     </div>
-                </div>
-            </div>
+                </a>
+            {{/each}}
         </section>
-    <!-- </div> -->
 </body>
 </html>
