--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,23 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medium test</title>
-    <link rel="stylesheet" href="./index.css" type="text/css">
+    <link rel="stylesheet" href="css/index.css" type="text/css">
 </head>
 <body>
     <div class="logo">
-        <img src="medium-Assets/MEDIUM.png">
+        <img src="img/MEDIUM.png">
     </div>
     <div class="container">
         <div class="onBoarding-Message">
             <div class="onBoarding-Img">
-                <img src="medium-Assets/onBoarding.svg">
+                <img src="img/onBoarding.svg">
             </div>
             <div class="onBoarding-Text">
                 <h1>Knowledge they say is power!</h1>
                 <p>Welcome to medium. A place of fun Blogging, where you can create the fun by blogging or enjoy the fun by reading.</p>
             </div>
         </div>
-        <button class="onBoarding-Button">start Blogging</button>
+        {{!-- 61046d3a58d96d1f2caad99c --}}
+        <a href="posts/61046d3a58d96d1f2caad99c/"><button class="onBoarding-Button">start Blogging</button></a>
     </div>
 </body>
 </html>
