--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,52 +7,52 @@
 
 @font-face{
     font-family:montserratBold;
-    src:url('./fonts/Montserrat-Bold.ttf');
+    src:url('/fonts/Montserrat-Bold.ttf');
 }
 
 @font-face{
     font-family:montserratExtraBold;
-    src:url('./fonts/Montserrat-ExtraBold.ttf');
+    src:url('/fonts/Montserrat-ExtraBold.ttf');
 }
 
 @font-face{
     font-family:montserratBlack;
-    src:url('./fonts/Montserrat-Black.ttf');
+    src:url('/fonts/Montserrat-Black.ttf');
 }
 
 @font-face{
     font-family:montserratMedium;
-    src:url('./fonts/Montserrat-Medium.ttf');
+    src:url('/fonts/Montserrat-Medium.ttf');
 }
 
 @font-face{
     font-family:montserratSemiBold;
-    src:url('./fonts/Montserrat-SemiBold.ttf');
+    src:url('/fonts/Montserrat-SemiBold.ttf');
 }
 
 @font-face{
     font-family:poppinsBlack;
-    src:url('./fonts/Poppins-Black.ttf');
+    src:url('/fonts/Poppins-Black.ttf');
 }
 
 @font-face{
     font-family:poppinsBold;
-    src:url('./fonts/Poppins-Bold.ttf');
+    src:url('/fonts/Poppins-Bold.ttf');
 }
 
 @font-face{
     font-family:poppinsExtraBold;
-    src:url('./fonts/Poppins-ExtraBold.ttf');
+    src:url('/fonts/Poppins-ExtraBold.ttf');
 }
 
 @font-face{
     font-family:poppinsMedium;
-    src:url('./fonts/Poppins-Medium.ttf');
+    src:url('/fonts/Poppins-Medium.ttf');
 }
 
 @font-face{
     font-family:poppinsSemiBold;
-    src:url('./fonts/Poppins-SemiBold.ttf');
+    src:url('/fonts/Poppins-SemiBold.ttf');
 }
 
 
