--- a/views/main.hbs
+++ b/views/main.hbs
@@ -29,28 +29,39 @@
                 <div class="blog-header container">
                     <h1>Trending</h1>
                 </div>
+                {{!-- <h1>{{indexArticle.loggedId}}</h1> --}}
             </div>
-            <div class="background-wrapper">
-                <div class="blog-article container">
-                    <div class="blog-image">
-                        <img src="/img/Selfie.svg">
-                    </div>
-                    <div class="blog-piece">
-                        <h1 class="blog-category">Social Life</h1>
-                        <h1 class="blog-title">How Instagram Influences our Social Life</h1>
-                        <h2 class="blog-summary">Talks about celebs</h2>
-                    </div>
-                    <div class="blog-metas">
-                        <div class="like-comment">
-                            <span class="likes"><img src="/img/Star.svg"><h1>21k</h1></span>
-                            <img src="/img/Bookmark.svg">
+            {{!-- Start loop from here --}}
+            {{#if indexArticle.posts}}
+                {{#each indexArticle.posts}}
+                    <a href="/posts/{{../indexArticle.loggedId}}/article/{{this._id}}">
+                    {{!-- <a href="/posts/61046d7658d96d1f2caad99e/article/{{this._id}}"> --}}
+                        <div class="background-wrapper">
+                            <div class="blog-article container">
+                                <div class="blog-image">
+                                    <img src="/{{this.thumbnail}}">
+                                </div>
+                                <div class="blog-piece">
+                                    <h1 class="blog-category">Tech</h1>
+                                    <h1 class="blog-title">{{sliceText this.title}}</h1>
+                                    <h2 class="blog-summary">{{sliceText this.body}}</h2>
+                                </div>
+                                <div class="blog-metas">
+                                    <div class="like-comment">
+                                        <span class="likes"><img src="/img/Star.svg"><h1>21k</h1></span>
+                                        <img src="/img/Bookmark.svg">
+                                    </div>
+                                    <div>
+                                        <h1 class="time-posted">{{dateLocale this.timePosted}}</h1>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div>
-                            <h1 class="time-posted">3 days ago</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                    </a>
+                {{/each}}
+            {{else}}
+                <h1 class="not_available">No Posts available yet</h1>
+            {{/if}}
             </div>
         </section>
 </body>
